# training

./: Программа.txt
module 1.1/: Accumulate.cpp  CMakeLists.txt  Dockerfile  ObjectPool.cpp  ThreadSafeQueue.cpp  is_container.cpp  main  задания.txt
module 1.2/: CMakeLists.txt  задание.txt
module 2.1/: Drawable.cpp  Shape.cpp  SmartArray.cpp  Student.cpp  factory.cpp  задания.txt
